day3/mongo-web-app/ng-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-exporter
  template:
    metadata:
      labels:
        app: nginx-exporter
    spec:
      containers:
        - name: nginx-exporter
          image: nginx/nginx-prometheus-exporter
          args:
            - -nginx.scrape-uri=http://dashboard.ashu-project.svc.cluster.local:80/metrics
          ports:
            - containerPort: 9113
