day3/mongo-web-app/mongo-exp-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-exporter
spec:
  selector:
    app: mongodb-exporter
  ports:
    - protocol: TCP
      port: 9216
      targetPort: 9216
  type: ClusterIP
