day3/mongo-web-app/ng-exp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-exporter
spec:
  selector:
    app: nginx-exporter
  ports:
    - protocol: TCP
      port: 9113
      targetPort: 9113
  type: ClusterIP
