day3/mongo-web-app/ashu-flask-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ashu-flask-route
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
  - host: flask.delvex.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard
            port:
              number: 80
